--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -1,24 +1,42 @@
 name: Deploy to Vercel
+
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - '**'  # Trigger on all PRs
 
 jobs:
   vercel-deploy:
     runs-on: ubuntu-latest
-    if: github.actor == 'fahimahammed' # Only admin/maintainer
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
       - name: Install Vercel CLI
         run: npm install --global vercel@latest pnpm
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Build Project Artifacts
-        run: NEXT_PUBLIC_VERCEL_ENV=production vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Pull Vercel Environment Info
+        run: vercel pull --yes --environment=preview
+
+      - name: Build Project
+        run: |
+          if [ "${{ github.event_name }}" == "push" ] && [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            NEXT_PUBLIC_VERCEL_ENV=production vercel build --prod
+          else
+            NEXT_PUBLIC_VERCEL_ENV=preview vercel build
+          fi
+
+      - name: Deploy to Vercel
+        run: |
+          if [ "${{ github.event_name }}" == "push" ] && [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            vercel deploy --prebuilt --prod
+          else
+            vercel deploy --prebuilt
+          fi
