--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -20,10 +20,10 @@ jobs:
         run: npm install --global vercel@latest pnpm
 
       - name: Pull Vercel Environment Info
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=preview 
 
       - name: Build Project
-        run: NEXT_PUBLIC_VERCEL_ENV=preview vercel build --token=${{ secrets.VERCEL_TOKEN }}
+        run: NEXT_PUBLIC_VERCEL_ENV=preview vercel build
 
       - name: Deploy Preview to Vercel
         id: vercel_deploy
