--- a/.github/workflows/preview-deploy-to-vercel.yml
+++ b/.github/workflows/preview-deploy-to-vercel.yml
@@ -1,4 +1,4 @@
-name: Deploy Preview to Vercel
+name: Deploy Preview to Vercel (v3)
 
 on:
   pull_request:
@@ -15,11 +15,12 @@ jobs:
         run: npm install --global vercel@latest pnpm
 
       # 🔎 Debug (optional) - remove later once secrets are verified
-      - name: Debug Secrets
+      - name: Check Secrets
         run: |
-          echo "ORG_ID=${VERCEL_ORG_ID}"
-          echo "PROJECT_ID=${VERCEL_PROJECT_ID}"
-          echo "TOKEN length: ${#VERCEL_TOKEN}"
+          if [ -z "$VERCEL_TOKEN" ]; then echo "TOKEN missing"; else echo "TOKEN ok"; fi
+          if [ -z "$VERCEL_ORG_ID" ]; then echo "ORG_ID missing"; else echo "ORG_ID ok"; fi
+          if [ -z "$VERCEL_PROJECT_ID" ]; then echo "PROJECT_ID missing"; else echo "PROJECT_ID ok"; fi
+
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
