--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "prism-react-renderer": "^2.4.1",
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
-    "react-syntax-highlighter": "^15.6.6",
+    "react-syntax-highlighter": "^5.8.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
