fix: ci updated

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,5 +1,8 @@
 on:
-  workflow_dispatch: 
+  push:
+    branches:
+      - stage     # stage এ push/merge হলে auto trigger হবে
+  workflow_dispatch:
 
 permissions:
   contents: write
